--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,13 @@
 {
-  "name": "Plugin Name",
-  "description": "Description",
+  "name": "RasterMan - Image Editor",
+  "description": "Edit your images inside Penpot",
   "code": "/plugin.js",
   "icon": "/icon.png",
-  "permissions": ["page:read", "content:read", "file:read", "selection:read"]
+  "permissions": [
+    "page:read",
+    "content:read",
+    "file:read",
+    "selection:read",
+    "content:write"
+  ]
 }
